--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -1,7 +1,5 @@
 name: Publish package to GitHub Packages
-on:
-  release:
-    types: [created]
+on: workflow_dispatch
 jobs:
   publish:
     runs-on: ubuntu-latest
